Fix to product padding on mobile

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1,6 +1,5 @@
 .product {
   margin: 0;
-  padding: 0 10rem;
 }
 
 .product--no-media {
@@ -41,12 +40,14 @@
 
 @media screen and (min-width: 990px) {
   .product:not(.product--no-media):not(.featured-product) .product__media-wrapper {
+    padding-left: 10rem;
     max-width: 50%;
     width: calc(50% - 1rem / 2);
   }
 
   .product:not(.product--no-media):not(.featured-product) .product__info-wrapper {
     padding-left: 4rem;
+    padding-right: 10rem;
     max-width: 50%;
     width: calc(50% - 1rem / 2);
   }
